web-infras/parser/tests/fixtures/babel/es2015/uncategorised/201/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,4)
1|0o18
 |  ^
